# tadpoles-image-downloader

./: .claspignore  .gitignore  HEALTHCHECK.md  appsscript.json  package-lock.json  package.json  pyproject.toml  secrets.yaml
secrets/: healthcheck-url.age
src/: code.js
tadpoles_image_downloader/: cloud_storage.py  process_queue.py
tests/: test_process_queue.py
worker/: cloud_storage.py  process_queue.py
