[project]
name = "tadpoles-image-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "John Nguyen",email = "ipwnponies@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.13.5,<5.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-api-python-client (>=2.182.0,<3.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "piexif (>=1.1.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pudb = "^2025.1"
ipython = "^9.5.0"
ruff = "^0.13.0"
typer = "^0.17.4"

[tool.poetry.scripts]
main = "worker.process_queue:app"
